--- a/nnnotes/index.html
+++ b/nnnotes/index.html
@@ -14,7 +14,7 @@
 body {
 	font-family: var(--vscode-markdown-font-family, -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif);
 	font-size: var(--vscode-markdown-font-size, 14px);
-	padding: 0 26px;
+	padding: 0 15%;
 	line-height: var(--vscode-markdown-line-height, 22px);
 	word-wrap: break-word;
 }
