Use https and change padding

--- a/nnnotes/index.html
+++ b/nnnotes/index.html
@@ -14,7 +14,7 @@
 body {
 	font-family: var(--vscode-markdown-font-family, -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif);
 	font-size: var(--vscode-markdown-font-size, 14px);
-	padding: 0 26px;
+	padding: 0 10%;
 	line-height: var(--vscode-markdown-line-height, 22px);
 	word-wrap: break-word;
 }
@@ -365,7 +365,7 @@ code {
           : 'default'
     });
   </script>
-<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({ tex2jax: {inlineMath: [['$', '$']]}, messageStyle: "none" });
 </script>
