--- a/nnnotes/index.html
+++ b/nnnotes/index.html
@@ -309,7 +309,7 @@ pre code {
 
  body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe WPC", "Segoe UI", "Ubuntu", "Droid Sans", sans-serif, "Meiryo";
-	padding: 0 12px;
+	padding: 0 11%;
 }
 
 pre {
